--- a/bsApp/views/partials/header.ejs
+++ b/bsApp/views/partials/header.ejs
@@ -37,7 +37,7 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/page4"> Contact Us </a>
+            <a class="nav-link" href="/page4"> 100 Coins </a>
           </li>
 
         </ul>
