--- a/bsApp/views/partials/header.ejs
+++ b/bsApp/views/partials/header.ejs
@@ -25,11 +25,11 @@
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/page1">Browse Ad</a>
+            <a class="nav-link" href="/page1">Browse Coins</a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="/page2">Advertise</a>
+            <a class="nav-link" href="/page2">Advertise Coin</a>
           </li>
 
           <li class="nav-item">
@@ -38,6 +38,10 @@
 
           <li class="nav-item">
             <a class="nav-link" href="/page4"> 100 Coins </a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="/page5"> Mining Centers </a>
           </li>
 
         </ul>
