--- a/bsApp/views/page1.ejs
+++ b/bsApp/views/page1.ejs
@@ -13,9 +13,11 @@
         .container {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-around;
-            margin: 20px;
+            justify-content: center; 
+            margin: 20px auto; 
+            max-width: 1200px; 
         }
+        
         .card {
             width: 200px;
             border: 1px solid #ccc;
@@ -47,7 +49,7 @@
         <div class="row mt-5">
             <div class="col-md-6 offset-md-3">
                 <div id="readArea" class="text-center metamask-area">
-                    <h2 class="mt-3">Connected to MetaMask</h2>
+                    <h2 class="mt-3">Connected to MetaMask</h2> 
                     <p id="userArea" class="mt-3 text-muted">Status: Not connected to MetaMask</p>
                 </div>
             </div>
